[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm>=8.1.0"]

[project]
name = "openapi-mock"
description = "Serve an OpenAPI spec as a mock with respx."
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ name = "Adam Dangoor", email = "adamdangoor@gmail.com" }]
keywords = ["openapi", "mock", "respx", "httpx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
urls = { Homepage = "https://github.com/adamtheturtle/openapi-mock", Documentation = "https://adamtheturtle.github.io/openapi-mock/" }
dependencies = [
    "beartype>=0.18",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "respx>=0.22.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]
optional-dependencies.dev = [
    "furo==2025.12.19",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "pyright==1.1.408",
    "pyroma==5.0.1",
    "sybil[pytest]==9.3.0",
    "pre-commit==4.5.1",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
    "sphinxcontrib-spelling==8.0.2",
    "doccmd==2026.1.27.2",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openapi-mock = "openapi_mock.cli:main"

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.pytest.ini_options]
xfail_strict = true
log_cli = true

[tool.ruff]
target-version = "py312"
line-length = 88
lint.extend-select = ["C901", "ERA001"]
lint.unfixable = ["ERA001"]
lint.mccabe.max-complexity = 12

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.coverage.run]
source = ["src/openapi_mock"]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_also = ["if TYPE_CHECKING:"]
show_missing = true

[tool.mypy]
exclude = ["build", ".venv"]

[tool.pyright]
exclude = ["build", ".venv"]
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"

[tool.check-manifest]
ignore = [
    ".prettierrc",
    ".pre-commit-config.yaml",
    ".vscode/*.json",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.rst",
    ".git_archival.txt",
    "uv.lock",
    "tests",
    "tests/**",
    "docs/build",
    "docs/build/**",
    "spelling_private_dict.txt",
]
