[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "setuptools-scm>=8.1.0" ]

[project]
name = "openapi-mock"
description = "Serve an OpenAPI spec as a mock with respx."
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [ "httpx", "mock", "openapi", "respx" ]
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Adam Dangoor", email = "adamdangoor@gmail.com" } ]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
    "beartype>=0.18",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "respx>=0.22.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
]
optional-dependencies.dev = [
    "check-manifest==0.51",
    "deptry==0.24.0",
    "doc8==2.0.0",
    "doccmd==2026.2.27.1",
    "furo==2025.12.19",
    "interrogate==1.7.0",
    "pre-commit==4.5.1",
    "prek==0.3.3",
    "pydocstringformatter==0.7.5",
    "pyproject-fmt==2.16.2",
    "pyright==1.1.408",
    "pyroma==5.0.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.4",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
    "sphinxcontrib-spelling==8.0.2",
    "sybil[pytest]==9.3.0",
    "vulture==2.14",
    "yamlfix==1.19.1",
]
urls = { Homepage = "https://github.com/adamtheturtle/openapi-mock", Documentation = "https://adamtheturtle.github.io/openapi-mock/" }
scripts.openapi-mock = "openapi_mock.cli:main"

[tool.setuptools]
zip-safe = false
packages.find.where = [ "src" ]

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py312"
line-length = 88
lint.extend-select = [ "C901", "ERA001" ]
lint.unfixable = [ "ERA001" ]
lint.mccabe.max-complexity = 12

[tool.check-manifest]
ignore = [
    "*.pyc",
    "__pycache__",
    "__pycache__/**",
    ".editorconfig",
    ".prettierrc",
    ".pre-commit-config.yaml",
    ".vscode/*.json",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.rst",
    ".git_archival.txt",
    "uv.lock",
    "conftest.py",
    "docs",
    "docs/**",
    "tests",
    "tests/**",
    "docs/build",
    "docs/build/**",
    "spelling_private_dict.txt",
]

[tool.deptry]
pep621_dev_dependency_groups = [ "dev" ]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
run.source = [ "src/openapi_mock" ]
report.exclude_also = [ "if TYPE_CHECKING:" ]
report.fail_under = 100
report.show_missing = true

[tool.mypy]
exclude = [ "build", ".venv" ]

[tool.pyright]
exclude = [ "build", ".venv" ]
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"

[tool.pydocstringformatter]
write = true
split-summary-body = false
max-line-length = 88

[tool.interrogate]
fail-under = 100
omit-covered-files = true
verbose = 2

[tool.doc8]
max_line_length = 2000
ignore_path = [
    "./.eggs",
    "./docs/build",
    "./node_modules",
    "./src/*.egg-info/",
]

[tool.vulture]
ignore_names = [
    "add_openapi_to_respx",
    "main",
    "base_url",
    "request",
]
exclude = [ ".venv" ]

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
